compiler/tests/success/risc-v/sub.jazz
export
fn sub(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;

    // Registers.
    x = arg0 - arg1;
    reg u32 y;
    y = x + 2;

    [x] = x;

    // Immediates.
    x = arg0 - 1;
    x -= 1;
    [x] = x;
    x = arg0 - -1;
    x -= -1;

    x -= 2048;
    x -= 0;
    x -= -2047;
    
    x += y;
    [x] = x;

    reg u32 res;
    res = x;
    return res;
}
